[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Collectible.gd" type="Script" id=1]
[ext_resource path="res://assets/Sounds/coin.wav" type="AudioStream" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]

[node name="Collectible" type="Area2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="CollectParticles" type="CPUParticles2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
